# Codevis-fork

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  preferences.kcfg  resources.qrc
cliapps/: CMakeLists.txt  codevis_create_codebase_db.m.cpp  codevis_dump_database.m.cpp
cmake/: AddTargetLibrary.cmake  CodevisDeployPlugin.cmake
desktopapp/: CMakeLists.txt  apptesting_fixture.cpp  apptesting_fixture.h  codevisui.rc  desktopapp.m.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  testmainwindow.cpp  testmainwindow.h
doc/: architecture_overview.md  multi_language_support_exploration.md
lvtcgn/: CMakeLists.txt  ct_lvtcgn_codegendialog.cpp
lvtclp/: CMakeLists.txt  ct_lvtclp_clputil.cpp  ct_lvtclp_clputil.h  ct_lvtclp_compilerutil.cpp  ct_lvtclp_componentutil.cpp  ct_lvtclp_cpp_tool.cpp  ct_lvtclp_cpp_tool.h  ct_lvtclp_cpp_tool.t.cpp  ct_lvtclp_cpp_tool_constants.h  ct_lvtclp_diagnostic_consumer.cpp  ct_lvtclp_filesystemscanner.cpp  ct_lvtclp_filesystemscanner.t.cpp  ct_lvtclp_fileupdatemgr_physical.t.cpp  ct_lvtclp_fileutil.cpp  ct_lvtclp_header_callback_fn.h  ct_lvtclp_headercallbacks.cpp  ct_lvtclp_headercallbacks.h  ct_lvtclp_logicaldepscanner.t.cpp  ct_lvtclp_logicaldepvisitor.cpp  ct_lvtclp_logicaldepvisitor.h  ct_lvtclp_parse_error_handler.cpp  ct_lvtclp_staticfnhandler.cpp  ct_lvtclp_testnamespace.t.cpp  ct_lvtclp_testphysicalandtemplates.t.cpp  ct_lvtclp_testsourcefile.t.cpp  ct_lvtclp_testutil.cpp  ct_lvtclp_tool.cpp  (+1 more)
plugins/cycle_detection_plugin/: CMakeLists.txt  plugin.cpp
plugins/lakosian_test_rules_plugin/: CMakeLists.txt  plugin.cpp
(+91 files in other folders)
